<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_cat_t_settings">

        <CheckBoxPreference
            android:key="enabledMonitorCharging"
            android:title="@string/settings_t_monitor_charging"
            />
        <PreferenceScreen
            android:dependency="enabledMonitorCharging"
            android:key="mode"
            android:title="@string/settings_t_mode"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_t_led_settings">

        <CheckBoxPreference
            android:dependency="enabledMonitorCharging"
            android:key="enabledChargingLed"
            android:title="@string/settings_t_charging_led"
            />
        <PreferenceScreen
            android:dependency="enabledChargingLed"
            android:summary="@string/settings_s_battery_level_interval"
            android:title="@string/settings_t_battery_level_interval">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="hk.ChargingLED.preferences.CustomIntervalActivity"
                android:targetPackage="hk.ChargingLED"
                />
        </PreferenceScreen>
        <PreferenceScreen
            android:dependency="enabledChargingLed"
            android:summary="@string/settings_s_battery_level_color"
            android:title="@string/settings_t_battery_level_color">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="hk.ChargingLED.preferences.CustomColorActivity"
                android:targetPackage="hk.ChargingLED"
                />
        </PreferenceScreen>
        <PreferenceScreen
            android:dependency="enabledChargingLed"
            android:summary="@string/settings_s_blink_rate"
            android:title="@string/settings_t_blink_rate">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="hk.ChargingLED.preferences.CustomBlinkActivity"
                android:targetPackage="hk.ChargingLED"
                />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_t_notification_settings">

        <CheckBoxPreference
            android:dependency="enabledMonitorCharging"
            android:key="enabledChargingNotification"
            android:title="@string/settings_t_charging_notification"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_t_sound_settings">

        <CheckBoxPreference
            android:dependency="enabledMonitorCharging"
            android:key="enabledChargingSound"
            android:title="@string/settings_t_charging_sound"
            />
        <RingtonePreference
            android:dependency="enabledChargingSound"
            android:key="pluginSound"
            android:persistent="true"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/settings_t_plugin_sound"
            />
        <RingtonePreference
            android:dependency="enabledChargingSound"
            android:key="unplugSound"
            android:persistent="true"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/settings_t_unplug_sound"
            />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enabledChargingSound"
            android:key="enabledMonitorBatteryLevel"
            android:title="@string/settings_t_monitor_battery_level"
            />
        <hk.ChargingLED.ui.SeekBarPreference
            xmlns:custom="http://schemas.android.com/apk/res/hk.ChargingLED"
            android:defaultValue="100"
            android:dependency="enabledMonitorBatteryLevel"
            android:key="batteryLevel"
            android:summary=""
            android:title="@string/settings_t_battery_level"
            custom:maxValue="100"
            custom:minValue="1"
            custom:unitsLeft=""
            custom:unitsRight="%"
            />
        <RingtonePreference
            android:dependency="enabledMonitorBatteryLevel"
            android:key="batteryLevelReachedSound"
            android:persistent="true"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/settings_t_battery_level_reached_sound"
            />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enabledMonitorBatteryLevel"
            android:key="enableSilentPeriod"
            android:title="@string/settings_t_enable_silent_period"
            />
        <PreferenceScreen
            android:dependency="enableSilentPeriod"
            android:key="silentPeriod"
            android:title="@string/settings_t_silent_period"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_t_other">

        <CheckBoxPreference
            android:dependency="enabledMonitorCharging"
            android:key="enabledDebugMode"
            android:title="@string/settings_t_debug_mode"
            />
        <PreferenceScreen
            android:dependency="enabledMonitorCharging"
            android:summary="@string/pref_s_import_export"
            android:title="@string/pref_t_import_export">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="hk.ChargingLED.preferences.ImExActivity"
                android:targetPackage="hk.ChargingLED"
                />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_t_support">

        <PreferenceScreen
            android:summary="@string/support_s_help"
            android:title="@string/support_t_help">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="hk.ChargingLED.preferences.HelpActivity"
                android:targetPackage="hk.ChargingLED"
                />
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/support_s_faq"
            android:title="@string/support_t_faq">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="hk.ChargingLED.preferences.FaqActivity"
                android:targetPackage="hk.ChargingLED"
                />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_t_about">

        <PreferenceScreen
            android:title="@string/about_t_changelog">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="hk.ChargingLED.preferences.ChangelogActivity"
                android:targetPackage="hk.ChargingLED"
                />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="version"
            android:summary="@string/about_s_copyright"
            android:title="@string/about_t_version"
            />
        <PreferenceScreen
            android:summary="@string/about_s_license"
            android:title="@string/about_t_license"
            />
        <PreferenceScreen
            android:summary="@string/about_s_source_code"
            android:title="@string/about_t_source_code"
            />
    </PreferenceCategory>

</PreferenceScreen>
